--- a/_sass/partials/base/_base.scss
+++ b/_sass/partials/base/_base.scss
@@ -1,3 +1,53 @@
+p {
+  font-size: em(20);
+  line-height: em(30,20);
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+figcaption {
+  color: #888888;
+  display: block;
+  font-size: 14px;
+  line-height: 1.4em;
+  overflow: auto;
+  border-bottom: 1px solid #E9E9E9;
+  margin-bottom: 10px;
+}
+
+figcaption p {
+  font-weight: 300;
+  font-size: 1em;
+  letter-spacing: 0;
+  line-height: 1.42857;
+  margin: 10px 0;
+  padding: 0 15px 0 15px;
+  font-family: $font-family-sans;
+}
+
+.title {
+  color: black;
+  font-family: $font-family-sans;
+  text-decoration: none;
+  word-wrap: break-word;
+}
+
+.title--large {
+  font-size: em(32);
+  line-height: em(36,32);
+
+  @include breakpoint($breakpoint-tablet-portrait) {
+    font-size: em(52);
+    line-height: em(56,52);
+  }
+}
+
+.title--aside {
+  text-transform: uppercase;
+}
 
 .center {
   text-align: center;
