--- a/_sass/partials/module/_module.scss
+++ b/_sass/partials/module/_module.scss
@@ -3,8 +3,11 @@
 @import 'partials/article';
 @import 'partials/article-list';
 @import 'partials/article-featured';
+@import 'partials/article-related';
 @import 'partials/footer';
 @import 'partials/grid-styles';
 @import 'partials/hero';
 @import 'partials/menus';
 @import 'partials/series';
+@import 'partials/tags';
+@import 'partials/icons';
