--- a/_includes/related.html
+++ b/_includes/related.html
@@ -1,42 +1,49 @@
-<section class="related-stories dark">
-    
-    <div class="row">
-      <!-- <h6 class="badge">Next in the issue</h6> -->
-      <article class="related-story small-6 large-3 columns">
-        <a href="#">
-          <img src="http://cdn.thedailybeast.com/content/newsweek/2013/06/05/why-your-doctor-is-afraid-of-your-dna/jcr:content/image.crop.410.273.jpg/1370454892969.cached.jpg" class="">
-          <div class="related-details">
-            <h5 class="section-label">Helse</h5>
-            <h3 class="related-title">Abilia kjøper opp Hospital IT for ukjent sum</h3>
-          </div>
-        </a>
-      </article>
-      <article class="related-story small-6 large-3 columns">
-        <a href="#">
-          <img src="http://cdn.thedailybeast.com/content/newsweek/2013/06/05/is-it-ethical-to-sell-a-human-embryo/jcr:content/image.crop.410.273.jpg/1370696309561.cached.jpg" class="">
-          <div class="related-details">
-            <h5 class="section-label">Teknologi</h5>
-            <h3 class="related-title">The Morality Test</h3>
-          </div>
-        </a>
-      </article>
-      <article class="related-story small-6 large-3 columns">
-        <a href="#">
-          <img src="http://cdn.thedailybeast.com/content/newsweek/2013/06/05/why-your-doctor-is-afraid-of-your-dna/jcr:content/image.crop.410.273.jpg/1370454892969.cached.jpg" class="">
-          <div class="related-details">
-            <h5 class="section-label">Helse</h5>
-            <h3 class="related-title">Abilia kjøper opp Hospital IT for ukjent sum</h3>
-          </div>
-        </a>
-      </article>
-      <article class="related-story small-6 large-3 columns">
-        <a href="#">
-          <img src="http://cdn.thedailybeast.com/content/newsweek/2013/06/05/is-it-ethical-to-sell-a-human-embryo/jcr:content/image.crop.410.273.jpg/1370696309561.cached.jpg" class="">
-          <div class="related-details">
-            <h5 class="section-label">Teknologi</h5>
-            <h3 class="related-title">The Morality Test</h3>
-          </div>
-        </a>
-      </article>
-    </div>
+<section class="l-container related dark">
+  <h2 hidden>Related stories</h2>
+
+  <div class="l-row">
+    <article class="related--article grid-3">
+      <a href="#">
+        <img src="/img/assets/placeholder--related-article.png" alt="">
+
+        <div class="related--details">
+          <h5 class="related--label">Helse</h5>
+          <h3 class="related--title">Abilia kjøper opp Hospital IT for ukjent sum</h3>
+        </div>
+      </a>
+    </article>
+
+    <article class="related--article grid-3">
+      <a href="#">
+        <img src="/img/assets/placeholder--related-article-2.png" alt="">
+
+        <div class="related--details">
+          <h5 class="related--label">Teknologi</h5>
+          <h3 class="related--title">The Morality Test</h3>
+        </div>
+      </a>
+    </article>
+
+    <article class="related--article grid-3">
+      <a href="#">
+        <img src="/img/assets/placeholder--related-article.png" alt="">
+
+        <div class="related--details">
+          <h5 class="related--label">Helse</h5>
+          <h3 class="related--title">Abilia kjøper opp Hospital IT for ukjent sum</h3>
+        </div>
+      </a>
+    </article>
+
+    <article class="related--article grid-3">
+      <a href="#">
+        <img src="/img/assets/placeholder--related-article-2.png" alt="">
+
+        <div class="related--details">
+          <h5 class="related--label">Teknologi</h5>
+          <h3 class="related--title">The Morality Test</h3>
+        </div>
+      </a>
+    </article>
+  </div>
 </section>
