#3437 More article re-factoring and sass cleanup

--- a/_sass/partials/global/_variables.scss
+++ b/_sass/partials/global/_variables.scss
@@ -4,7 +4,7 @@
 // Font families
 $font-family-sans: 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
 $font-family-bold: 'Arial Black', 'Arial Bold', Gadget, sans-serif;
-$font-family-serif: Cambria, 'Hoefler Text', Utopia, 'Liberation Serif', 'Nimbus Roman No9 L Regular', Times, 'Times New Roman', serif;
+$font-family-serif: Cambria, Utopia, 'Liberation Serif', 'Nimbus Roman No9 L Regular', Times, 'Times New Roman', serif;
 
 // Colors
 $color-top-border: #DDD;
