--- a/_sass/partials/module/_module.scss
+++ b/_sass/partials/module/_module.scss
@@ -11,3 +11,6 @@
 @import 'partials/series';
 @import 'partials/tags';
 @import 'partials/icons';
+@import 'partials/media';
+// @import 'partials/author'; not in use.
+@import 'partials/buttons';
