--- a/_sass/modules/_searchbox.scss
+++ b/_sass/modules/_searchbox.scss
@@ -33,6 +33,6 @@
     cursor: pointer;
     border: none;
     outline: none;
-    background: url('../../img/mag.png') no-repeat center center #2ba6cb;
+    background: image-url('mag.png') no-repeat center center #2ba6cb;
   }
 }
