--- a/_sass/partials/module/partials/_article-list.scss
+++ b/_sass/partials/module/partials/_article-list.scss
@@ -5,6 +5,7 @@
   li {
     @include box-sizing('border-box');
     @include no-bullet;
+    @extend %clearfix;
 
     border-bottom: 1px solid $article-list-border-color;
 
