--- a/_includes/serp.html
+++ b/_includes/serp.html
@@ -1,10 +1,8 @@
 
-<article itemscope="" itemtype="http://schema.org/Article" class="serp row" hidden>
-  <div class="grid-3">
-    <a href="#"><img data-src="" src="#" alt=""></a>
-  </div>
+<article itemscope="" itemtype="http://schema.org/Article" class="search--result" hidden>
+  <a href="#" class="search--result-thumb"><img data-src="" src="#" alt=""></a>
 
-  <div class="grid-9 omega">
+  <div class="search--result-text">
     <header>
       <h2 itemprop="headline" class="story-title serp-title">
         <a rel="bookmark" itemprop="url" href="#"></a>
