--- a/_sass/partials/module/partials/_hero.scss
+++ b/_sass/partials/module/partials/_hero.scss
@@ -20,9 +20,12 @@
 }
 
 .hero--box {
-  @include grid-span(7, 2);
   @include block-center;
 
+  @include breakpoint($breakpoint-narrow) {
+    @include grid-span(7, 2);
+    @include block-center;
+  }
   @include breakpoint($breakpoint-medium) {
     @include grid-span(6, 4);
     @include block-center;
