--- a/_sass/partials/module/partials/_media.scss
+++ b/_sass/partials/module/partials/_media.scss
@@ -67,7 +67,7 @@ figcaption {
 .image {
   margin: 0 em(-15,20) 0 em(-15,20);
 
-  @include breakpoint($breakpoint-tablet-portrait) {
+  @include breakpoint($breakpoint-narrow) {
     margin: 0;
   }
 }
