--- a/_sass/partials/layout/_layout.scss
+++ b/_sass/partials/layout/_layout.scss
@@ -9,10 +9,23 @@
   clear: both;
   margin-left: auto;
   margin-right: auto;
-  max-width: $grid-max-width;
+  max-width: ((320 - 20) / 320) * 100%;
   @extend %clearfix;
 
   text-align: left;
+
+  @include breakpoint($breakpoint-small) {
+    max-width: (($breakpoint-small - 20) / $breakpoint-small) * 100%;
+  }
+  @include breakpoint($breakpoint-narrow) {
+    max-width: (($breakpoint-narrow - 20) / $breakpoint-narrow) * 100%;
+  }
+  @include breakpoint($breakpoint-medium) {
+    max-width: (($breakpoint-medium - 20) / $breakpoint-medium) * 100%;
+  }
+  @include breakpoint($breakpoint-wide) {
+    max-width: $grid-max-width;
+  }
 }
 
 // Structure
@@ -63,7 +76,7 @@
 
     color: $color-header-color;
     font-size: em(17px);
-    font-weight: 900;
+    font-weight: 200;
     line-height: $nf-menu-line-height;
     text-transform: uppercase;
   }
