--- a/css/ie.css
+++ b/css/ie.css
@@ -15,7 +15,7 @@ img, video {
   box-sizing: border-box;
 }
 
-/* normalize.css v2.1.1 | MIT License | git.io/normalize */
+/*! normalize.css v2.1.1 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
