--- a/css/print.css
+++ b/css/print.css
@@ -17,7 +17,7 @@ img, video {
   *behavior: url('../behaviors/box-sizing/boxsizing.php');
 }
 
-/* normalize.css v2.1.1 | MIT License | git.io/normalize */
+/*! normalize.css v2.1.1 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
